# kde1-kdebase

./: .cvsignore  .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  Makefile.cvs  Makefile.in  README  README.pam  VERSIONS  acconfig.h  acinclude.m4  acinclude.m4.in  aclocal.m4  automoc  config.h  config.h.bot  config.h.in  configure  configure.in  kdebase.spec  kdebase.spec.in  kdminclude.m4  libtool.m4.in  ltconfig  ltconfig.patch-1  ltconfig.patch-2  ltmain.sh
applnk/: .directory  CMakeLists.txt  Help.kdelnk  Home.kdelnk  KControl.kdelnk  Kfind.kdelnk  Krefresh.kdelnk  Makefile.am  Makefile.in  Trash.kdelnk
applnk/Applications/: .directory  Makefile.am  Makefile.in
applnk/Games/: .directory  Makefile.am  Makefile.in
applnk/Graphics/: .directory  Makefile.am  Makefile.in
applnk/Internet/: .directory  Makefile.am  Makefile.in
applnk/Multimedia/: .directory  Makefile.am  Makefile.in
applnk/Settings/: .directory  Makefile.am  Makefile.in
applnk/System/: .directory  Arrange.kdelnk  Kdisplay.kdelnk  Kfontmanager.kdelnk  Makefile.am  Makefile.in  kappfinder.kdelnk  kcc.kdelnk  kfmsu.kdelnk
applnk/Utilities/: .directory  KMenuEdit.kdelnk  Makefile.am  Makefile.in  UNIX.kdelnk  konsole.kdelnk  kvt.kdelnk
compat/: CMakeLists.txt  README  kde1-screenlockinvoker.cpp  kde1.desktop  startkde1-fast  suspendlocker.cpp
compat/apps/: CMakeLists.txt
compat/pics/: CMakeLists.txt  qtcreator.xpm
doc/: CMakeLists.txt  Makefile.am  Makefile.in
doc/kcc/: index-5.html
doc/kcontrol/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  index-1.html  (+4 more)
kappfinder/: CMakeLists.txt  Makefile.am  Makefile.in  kappfinder  kappfinder.cmake.in  kappfinder.in  kappfinder_restart
kaudio/: .cvsignore  CHANGES  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README.kaudioserver  TODO  buffers.cpp  buffers.h  democlient.cpp  democlient.h  io_oss.cpp  io_oss.h  kaudioserver-0.52.lsm  kaudioserver.cpp  kaudioserver.lsm  kplayaudio.cpp  kplayaudio.h  maudio-0.42.lsm  maudio.cpp  maudio.h  maudio.html  maudio.lsm  sample.cpp  sample.h  version.h  x-wav.kdelnk
kcheckpass/: .cvsignore  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README  README-1.0  checkpass_etcpasswd.c  checkpass_etcpasswd.cpp  checkpass_osfc2passwd.c  checkpass_pam.c  checkpass_pam.cpp  checkpass_shadow.c  checkpass_shadow.cpp  kcheckpass.c  kcheckpass.cpp  kcheckpass.h
kcontrol/: CHANGES  CMakeLists.txt  Makefile.am  Makefile.in  kcontrol.old
kdehelp/: .cvsignore  CHANGES  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  Makefile.in.orig  Makefile.std  README  bookmark.cpp  bookmark.h  cgi.cpp  cgi.h  dbnew.cpp  dbnew.h  error.cpp  error.h  finddlg.cpp  fmtbase.h  fmthtml.h  form.html  help.cpp  help.h  helpwin.cpp  helpwin.h  history.cpp  history.h  info.cpp  info.h  kbutton.cpp  kdehelp-0.4.11.lsm  kdehelp-0.4.12.lsm  kdehelp.lsm  kdehelp.xpm  khelp.cpp  khelp.h  main.cpp  mainwidget.cpp  mainwidget.h  man.cpp  (+7 more)
kdm/: .cvsignore  CMakeLists.txt  ChangeLog  Chooser.ad  Makefile.am  Makefile.in  README  TODO  access.c  auth.c  choose.c  chooser.cpp  daemon.c  dm.c  dm.h  dpylist.c  error.c  file.c  genauth.c  gif.cpp  greet.h  jpeg.cpp  kdm-0.5.lsm  kdm-config.h  kdm_on_RH5.0.html  kdmconfig.cpp  kdmconfig.h  kdmdesktop.cpp  kdmshutdown.cpp  kdmshutdown.h  kdmusers.h  kdmview.cpp  kdmview.h  kfdialog.cpp  kfdialog.h  kgreeter.cpp  kgreeter.h  krb5auth.c  mitauth.c  netaddr.c  (+17 more)
kfind/: .cvsignore  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  kfind.cpp  kfind.xpm  kftabdlg.cpp  kfwin.cpp  version.h
kfm/: .cvsignore  AUTHORS  CHANGES  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  Makefile.in.orig  Makefile.in2  README  TODO  autostart.cpp  bookmark.cpp  bookmark.h  cgi.cpp  cgi.h  config-kfm.h  debug.cpp  directory.autostart  directory.templates  directory.trash  fileentry.cpp  finddlg.cpp  finddlg.h  htmlcache.cpp  htmlcache.h  htmlopts.cpp  htmlopts.h  ipc.cpp  kURLcompletion.cpp  kbind.cpp  kbind.h  kbookmarkdlg.cpp  kbookmarkdlg.h  kbutton.cpp  kbutton.h  kcookiejar.cpp  kcookiejar.h  kcookiewin.cpp  kcookiewin.h  (+86 more)
kfontmanager/: .cvsignore  CMakeLists.txt  INSTALL  Makefile.am  Makefile.in  README  kfontexplorer.cpp  kfontexplorer.h  kfontlist.cpp  kfontlist.h  kfontmanager-0.2.1.lsm  kfontmanager-0.2.2.lsm  kfontmanager.cpp  kfontmanager.h  kfontmanager.kdelnk  kfontmanager.lsm  kfontmanager.xpm  main.cpp  mini-kfontmanager.xpm  version.h
kikbd/: .cvsignore  AUTHORS  BUGS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  TODO  kcmikbd.cpp  kcmikbd.kdelnk  kconfobjs.cpp  kconfobjs.h  kconfobjsw.h  keymap.cpp  keymap.h  keytrans.C  keytrans.cpp  keytrans.h  kikbd.cpp  kikbd.h  kikbd.kdelnk  kikbd.xpm  kikbdconf.C  kikbdconf.cpp  kikbdconf.h  kikbdrc  kobjconf.C  kobjconf.cpp  kobjconf.h  large-kikbd.xpm  main.cpp  mini-kikbd.xpm  widgets.cpp  widgets.h
klipper/: .cvsignore  Makefile.am  klipper.kdelnk  klipper.xpm  klipper_mini.xpm  large-klipper.xpm  main.cpp  mykapp.h  toplevel.cpp  toplevel.h
kmenuedit/: .cvsignore  ANNOUNCE  BUGS  CHANGES  CMakeLists.txt  DesktopPathDialog.cpp  DesktopPathDialog.h  DesktopPathDialogData.cpp  DesktopPathDialogData.h  INSTALL  IconPathDialog.cpp  IconPathDialog.h  IconPathDialogData.cpp  IconPathDialogData.h  KMenuEdit.kdelnk  Makefile.am  Makefile.in  MenuNameDialog.cpp  MenuNameDialog.dlg  MenuNameDialog.h  MenuNameDialogData.cpp  MenuNameDialogData.h  README  button.cpp  button.h  confmenu.cpp  confmenu.h  cpopmenu.cpp  cpopmenu.h  entry.dlg  entry2.dlg  entry3.dlg  entry4.dlg  entry5.dlg  entry6.dlg  entry7.dlg  entrydialog.cpp  entrydialog.h  iconpath.dlg  kmenuedit-0.2.1.lsm  (+8 more)
kpanel/: .cvsignore  CHANGES  CMakeLists.txt  Desktop.kdelnk  Home.kdelnk  LICENSE.readme  Makefile.am  Makefile.in  README  README.kdisknav-devel  SWALLOW.readme  events.C  kpanel.C  kpanel.h  kpanel_version.h  layout.C  main.C  personal.kdelnk  personal_directory  pfilemenu.C  pmenu.C  pmenu.h  props.C  props.h  tools.C
krootwm/: .cvsignore  CHANGES  CMakeLists.txt  Makefile.am  Makefile.in  README  krootwm.C  krootwm.h  tools.C  version.h
(+4829 files in other folders)
