# Original Author was Kalle@kde.org
# I lifted it in some mater. (Stephan Kulow)
# I used much code from Janos Farkas

dnl Process this file with autoconf to produce a configure script.

AC_INIT(acinclude.m4) dnl a source file from your sub dir
dnl AC_MSG_WARN("This Code is alpha. It may not even compile.  Use at your own risk.")
AC_CANONICAL_SYSTEM 
AC_ARG_PROGRAM

dnl Automake doc recommends to do this only here. (Janos)
AM_INIT_AUTOMAKE(kdebase, 0.90) dnl searches for some needed programs

dnl make $KDEDIR the default for the installation
AC_PREFIX_DEFAULT(${KDEDIR:-/usr/local/kde})

dnl generate the config header
AM_CONFIG_HEADER(config.h) dnl at the distribution this done

dnl Checks for programs.
AC_CHECK_COMPILERS

# the following is to allow programs, that are known to 
# have problems when compiled with -O2
if test -n "$CXXFLAGS"; then
  safe_IFS=$IFS
  IFS=" "
  NOOPT_CXXFLAGS=""
  for i in $CXXFLAGS; do
    if test "$i" = "-O2"; then
      i=""
    fi
    NOOPT_CXXFLAGS="$NOOPT_CXXFLAGS $i"
  done
  IFS=$safe_IFS
fi
AC_SUBST(NOOPT_CXXFLAGS)
KDE_PROG_LIBTOOL

dnl WITH_NLS is for the po files
AM_KDE_WITH_NLS
AC_PATH_KDE

case $host in 
*-*-linux* )
   AC_CHECK_HEADER(elf.h, 
        shadow_support=yes,
        shadow_support=no
     )
     ;;
esac

AC_CHECK_KDM dnl in kdminclude.m4

if test "$shadow_support" = "yes"; then
  AC_DEFINE(HAVE_SHADOW)
fi

if test "$SETUIDFLAGS" = ""; then 
 if test "$shadow_support" = "no"; then
  SETUIDFLAGS=""
 else
  SETUIDFLAGS="-m 4755"
 fi
else
 SETUIDFLAGS="-m $SETUIDFLAGS"
fi
AC_SUBST(SETUIDFLAGS)

AC_FIND_JPEG
AC_HAVE_GL(GL_SAVERS="kmorph3d.kss",GL_SAVERS="")
AC_SUBST(GL_SAVERS)
AC_HAVE_XPM(XPM_SAVERS="kbat.kss",XPM_SAVERS="")
AC_SUBST(XPM_SAVERS)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h sys/time.h unistd.h crypt.h sys/select.h \
	sys/ioctl.h sys/stropts.h termio.h termios.h lastlog.h malloc.h \
	sys/sockio.h crypt.h krb5/krb5.h rpc/rpc.h rpc/key_prot.h \
	sys/m_wait.h sys/param.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_LANG_CPLUSPLUS
AC_HEADER_TIME

dnl check if the compiler has bool
AC_CHECK_BOOL
AC_LANG_C
AC_C_LONG_DOUBLE
AC_TYPE_GETGROUPS

dnl Checks for library functions. MISCOBJS is for kdecore
AC_CHECK_FUNCS(socket powl sqrtl strdup getdtablesize vsnprintf setpgid nice)
AC_CHECK_SETENV
AC_CHECK_GETDOMAINNAME
AC_CHECK_GETHOSTNAME
AC_CHECK_USLEEP

dnl output files
topdir=`pwd`
AC_SUBST(topdir)

dnl Perform program name transformation
AC_ARG_PROGRAM

if test -z "$RUN_KAPPFINDER"; then
RUN_KAPPFINDER="yes"
fi


AC_SUBST(RUN_KAPPFINDER)

AC_OUTPUT(Makefile \
	applnk/Applications/Makefile \
	applnk/Games/Makefile \
	applnk/Graphics/Makefile \
	applnk/Internet/Makefile \
	applnk/Makefile \
	applnk/Multimedia/Makefile \
	applnk/Settings/Desktop/Makefile \
	applnk/Settings/Information/Makefile \
	applnk/Settings/Input_Devices/Makefile \
	applnk/Settings/Makefile \
	applnk/Settings/Network/Makefile \
	applnk/Settings/Panel/Makefile \
	applnk/Settings/Sound/Makefile \
	applnk/Settings/Windows/Makefile \
	applnk/System/Makefile \
	applnk/Utilities/Makefile \
	config/Makefile \
	doc/Makefile \
	doc/kcontrol/Makefile \
	doc/kcontrol/bell/Makefile \
	doc/kcontrol/info/Makefile \
	doc/kcontrol/input/Makefile \
	doc/kcontrol/kwm/Makefile \
	doc/kcontrol/locale/Makefile \
	doc/kcontrol/syssound/Makefile \
	doc/kcontrol/syssound/de/Makefile \
	doc/kcontrol/syssound/en/Makefile \
	doc/kdehelp/Makefile \
	doc/kdisplay/Makefile \
	doc/kdm/Makefile \
	doc/kfind/Makefile \
	doc/kfm/Makefile \
	doc/kfontmanager/Makefile \
	doc/kmenuedit/Makefile \
	doc/kvt/Makefile \
	doc/kwm/Makefile \
	kappfinder/Makefile \
	kappfinder/Makefile \
	kappfinder/apps/Development/Makefile \
	kappfinder/apps/Editors/Makefile \
	kappfinder/apps/Graphics/Makefile \
	kappfinder/apps/Internet/Makefile \
	kappfinder/apps/Makefile \
	kappfinder/apps/System/Makefile \
	kappfinder/apps/Toys/Makefile \
	kappfinder/apps/Utilities/Makefile \
	kappfinder/apps/WordProcessing/Makefile \
	kappfinder/kappfinder \
	kappfinder/pics/Makefile \
	kappfinder/pics/mini/Makefile \
	kaudio/Makefile \
	kcontrol/Makefile \
	kcontrol/bell/Makefile \
	kcontrol/display/Makefile \
	kcontrol/info/Makefile \
	kcontrol/input/Makefile \
	kcontrol/kcontrol/Makefile \
	kcontrol/kcontrol/pics/Makefile \
	kcontrol/kcontrol/pics/mini/Makefile \
	kcontrol/kdm/Makefile \
	kcontrol/kdm/applnk/Makefile \
	kcontrol/kdm/doc/Makefile \
	kcontrol/kdm/pics/Makefile \
	kcontrol/kpanel/Makefile \
	kcontrol/kwm/Makefile \
	kcontrol/locale/Makefile \
	kcontrol/locale/pics/Makefile \
	kcontrol/samba/Makefile \
	kcontrol/sample/Makefile \
	kcontrol/syssound/Makefile \
	kdehelp/Makefile \
	kdehelp/index/Makefile \
	kdehelp/search/Makefile \
	kdm/Makefile \
	kdm/config/Makefile \
	kdm/pics/Makefile \
	kdm/xdmconfig/Makefile \
	kfind/Makefile \
	kfind/pics/Makefile \
	kfm/Desktop/Makefile \
	kfm/Desktop/Templates/Makefile \
	kfm/Makefile \
	kfm/client/Makefile \
	kfm/kfmexec/Makefile \
	kfm/kfmsu2 \
	kfm/kfmwarn/Makefile \
	kfm/kioslave/Makefile \
	kfm/pics/Makefile \
	kfontmanager/Makefile \
	kmenuedit/Makefile \
	kmenuedit/icons/Makefile \
	kpanel/Makefile \
	kpanel/pics/Makefile \
	kpanel/pics/mini/Makefile \
	krootwm/Makefile \
	kscreensaver/Makefile \
	kstartondesk/Makefile \
	kvt/Makefile \
	kwm/Makefile \
	kwm/pics/Makefile \
	kwmcom/Makefile \
	kwmmodules/Makefile \
	kwmmodules/kbgndwm/Makefile \
	kwmmodules/kwmpager/Makefile \
	kwmmodules/kwmsound/Makefile \
	mimetypes/Makefile \
	mimetypes/application/Makefile \
	mimetypes/audio/Makefile \
	mimetypes/image/Makefile \
	mimetypes/inode/Makefile \
	mimetypes/text/Makefile \
	mimetypes/text/Makefile \
	mimetypes/video/Makefile \
	pics/Makefile \
	pics/mini/Makefile \
	pics/toolbar/Makefile \
	pics/wallpapers/Makefile \
	po/Makefile \
	po/cs/Makefile \
	po/da/Makefile \
	po/de/Makefile \
	po/el/Makefile \
	po/es/Makefile \
	po/fi/Makefile \
	po/fr/Makefile \
	po/hr/Makefile \
	po/hu/Makefile \
	po/it/Makefile \
	po/nl/Makefile \
	po/no/Makefile \
	po/pl/Makefile \
	po/pt/Makefile \
	po/ro/Makefile \
	po/ru/Makefile \
	po/sk/Makefile \
	po/sv/Makefile \
	po/zh/Makefile )

AC_OUTPUT_COMMANDS(
if test -r kappfinder/kappfinder; then
   chmod +x kappfinder/kappfinder
fi
)



