add_subdirectory(kcontrol)
add_subdirectory(kdehelp)
add_subdirectory(kdisknav)
add_subdirectory(kdm)
add_subdirectory(kfind)
add_subdirectory(kfm)
add_subdirectory(kfontmanager)
add_subdirectory(kmenuedit)
add_subdirectory(kpager)
add_subdirectory(kpanel)
add_subdirectory(kvt)
add_subdirectory(kwm)
